@@ -1,4 +1,3 @@
-import java.sql.SQLOutput;
 import java.util.Iterator;
 import java.util.Vector;
 import java.util.Comparator;
@@ -12,17 +11,34 @@ public class War {
     Vector<Character> opponentArmy;
     boolean isWarEnded=false;
 
-
+    Vector<Character> challengerArmyAttackingArray = challengerArmy;
+    Vector<Character> opponentArmyAttackingArray = opponentArmy;
+    Vector<Character> challengerArmyDefendingArray = challengerArmy;
+    Vector<Character> opponentArmyDefendingArray = opponentArmy;
+    Vector<Character> opponentArmyHealingArray=opponentArmy;
+    Vector<Character> challengerArmyHealingArray=challengerArmy;
 
     public War(User initialChallenger,User initialOpponent){
         this.initialChallenger = initialChallenger;
         this.initialOpponent = initialOpponent;
+        this.startWar();
+    }
 
+    private void initialingArrays(Vector<Character> challengerArmy, Vector<Character> opponentArmy){
+        challengerArmyAttackingArray = challengerArmy;
+        opponentArmyAttackingArray = opponentArmy;
+        challengerArmyDefendingArray = challengerArmy;
+        opponentArmyDefendingArray = opponentArmy;
+        opponentArmyHealingArray=opponentArmy;
+        challengerArmyHealingArray=challengerArmy;
+    }
 
+    private void setGroundEffects(){
 
     }
-    void startWar(){
 
+
+    void startWar(){
         this.challenger = initialChallenger;
         this.opponent = initialOpponent;
         this.challengerArmy = new Vector<>(challenger.getArmy());
@@ -41,11 +57,9 @@ public class War {
                     }
                     if (character.getCharacterType().equals("sunChild")) {
                         character.setAttack(character.getAttack() - 1);
-
                     }
                     if (character.getCharacterType().equals("mystics")) {
                         character.setSpeed(character.getSpeed() - 1);
-
                     }
                 }
                 case "desert" -> {
@@ -54,7 +68,6 @@ public class War {
                     }
                     if (character.getCharacterType().equals("sunChild")) {
                         character.setAttack(character.getAttack() + 1);
-
                     }
                 }
                 case "arcane" -> {
@@ -71,238 +84,179 @@ public class War {
                     }
                 }
             }
-
         }
+        initialingArrays(challengerArmy, opponentArmy);
 
-        Vector<Character> challengerArmyAttackingArray = challengerArmy;
-        Vector<Character> opponentArmyAttackingArray = opponentArmy;
-        Vector<Character> challengerArmyDefendingArray = challengerArmy;
-        Vector<Character> opponentArmyDefendingArray = opponentArmy;
-        Vector<Character> opponentArmyHealingArray=opponentArmy;
-        Vector<Character> challengerArmyHealingArray=challengerArmy;
         double healersAttackValue;
-        Iterator<Character> iterator = opponentArmyHealingArray.iterator();
-        while (iterator.hasNext()) {
-            Character character = iterator.next();
-            if (character.getName().equals("healer")) {
 
-                iterator.remove();
-            }
-        }
-        Iterator<Character> iterator1 =challengerArmyHealingArray.iterator();
-        while (iterator.hasNext()) {
-            Character character = iterator1.next();
-            if (character.getName().equals("healer")) {
-                iterator1.remove();
+        for (Character character: challengerArmyHealingArray){
+            if (character instanceof Healer) {
+                opponentArmyHealingArray.remove(character);
             }
         }
 
+        for (Character character: challengerArmyHealingArray){
+            if (character instanceof Healer){
+                challengerArmyHealingArray.remove(character);
+            }
+        }
 
+        challengerArmyAttackingArray.sort(Comparator.comparingDouble(Character::getSpeed).reversed());//desending order
+        opponentArmyAttackingArray.sort(Comparator.comparingDouble(Character::getSpeed).reversed());//desending order
+        challengerArmyDefendingArray.sort(Comparator.comparingDouble(Character::getDefence));//ascending array
+        opponentArmyDefendingArray.sort(Comparator.comparingDouble(Character::getDefence));//ascending order
+        opponentArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));//ascending order
+        challengerArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));//ascending order
 
-
-        challengerArmyAttackingArray.sort(Comparator.comparingDouble(Character::getSpeed).reversed());
-        opponentArmyAttackingArray.sort(Comparator.comparingDouble(Character::getSpeed).reversed());
-        challengerArmyDefendingArray.sort(Comparator.comparingDouble(Character::getDefence).reversed());
-        opponentArmyDefendingArray.sort(Comparator.comparingDouble(Character::getDefence).reversed());
-        opponentArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));;
-
-        int attackingSide = 0; //set to 0 when challenger is attacking and set to 1 when opponent is attacking
-        int turn=1;
-        double previousHealth=opponentArmyDefendingArray.get(0).getHealth();
+        boolean attackingSide = false; //set to 0 when challenger is attacking and set to 1 when opponent is attacking
+        int turn = 1;
+        double previousHealth = opponentArmyDefendingArray.get(0).getHealth();
         while (!isWarEnded) {
-            System.out.println("Round no="+turn);
-            if(attackingSide==0){
-                System.out.print("Attacking Player=" + initialChallenger.getName() + " " + "Diffending Player=" + initialOpponent.getName());
-
+            int i=0;
+            System.out.println("Round no = "+turn);
+            if(!attackingSide){
+                System.out.print("Attacking Player = " + initialChallenger.getUserName() + " " + "Diffending Player = " + initialOpponent.getUserName());
             }
             else{
-                System.out.print("Attacking player=" + initialOpponent.getName() + " " + "Diffending Player=" + initialChallenger.getName());
-
+                System.out.print("Attacking player = " + initialOpponent.getUserName() + " " + "Diffending Player = " + initialChallenger.getUserName());
             }
-            if (attackingSide == 0) {//initially first attacking side is challenger
+            //initially first attacking side is challenger
+            if (!attackingSide) {
 
-                if(!challengerArmyAttackingArray.get(0).getName().equals("healer")) {//check the challenger attacking army character is a healer?
-                    //if not->>
+                //check the challenger attacking army character is a healer?
+                if(!(challengerArmyAttackingArray.getFirst() instanceof Healer)) {
 
-                    double dmg = 0.5 * (challengerArmyAttackingArray.get(0).getAttack()) - 0.1 * (opponentArmyDefendingArray.get(0).getDefence());//get the damge value of challenger army attacking array
-                    opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - dmg);//reduce the health of defending array army charactrer according to the damage value
+                    //get the damge value of challenger army attacking array
+                    double damage = 0.5 * (challengerArmyAttackingArray.get(0).getAttack()) - 0.1 * (opponentArmyDefendingArray.get(0).getDefence());
 
-                    System.out.println(opponentArmyDefendingArray.get(0).getName()+"'s health reduce by"+dmg+"by the attck of"+challengerArmyAttackingArray.get(0).getName());
+                    //reduce the health of defending array army charactrer according to the damage value
+                    opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - damage);
+                    System.out.println(opponentArmyDefendingArray.get(0).getName()+"'s health reduce by "+damage+" by the attack of "+challengerArmyAttackingArray.get(0).getName());
 
-                    if(initialChallenger.getHomeGround().equals("hillcrest") && challengerArmyAttackingArray.get(0).getCharacterType().equals("highlander")){
-                        double bonusdmg = 0.5 * (challengerArmyAttackingArray.get(0).getAttack()*0.2) - 0.1 * (opponentArmyDefendingArray.get(0).getDefence());//get the damge value of challenger army attacking array
-                        opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - bonusdmg);//reduce the health of defending array army charactrer according to the damage value
-
+                    if(initialChallenger.getHomeGround().equals("Hillcrest") && challengerArmyAttackingArray.get(0).getCharacterType().equals("highlander")){
+                        //get the damge value of challenger army attacking array
+                        double bonusDamage = 0.5 * (challengerArmyAttackingArray.get(0).getAttack()*0.2) - 0.1 * (opponentArmyDefendingArray.get(0).getDefence());
+                        //reduce the health of defending array army charactrer according to the damage value
+                        opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - bonusDamage);
                     }
-
-                    if(turn!=1){
-                        if(initialChallenger.getHomeGround().equals("arcane") && opponentArmyDefendingArray.get(0).getCharacterType().equals("mystics")){
+                    if(turn != 1){
+                        if(initialChallenger.getHomeGround().equals("Arcane") && opponentArmyDefendingArray.get(0).getCharacterType().equals("mystics")){
                             opponentArmyDefendingArray.get(0).setHealth(previousHealth*1.1);
-
-
                         }
                     }
-                    if(opponentArmyDefendingArray.get(0).getHealth()<=0){//check the opponentdifendingaramkycharacter is die or not
-                        System.out.println(opponentArmyDefendingArray.get(0).getName()+"Died!");//if died print
-                        String diedChar=opponentArmyDefendingArray.get(0).getName();//get the name of died character
-                        opponentArmyDefendingArray.remove(0);//remove the died character from opponentArmyDiffendingArray
-                        Iterator<Character> iterator3 =opponentArmyAttackingArray.iterator();//search and remove the died charactor from opponentArmyAttacking Array
-                        while (iterator.hasNext()) {
-                            Character character = iterator3.next();
-                            if (character.getName().equals(diedChar)) {
-                                iterator3.remove();
+                    //check the opponentdifendingaramkycharacter is die or not
+                    if(opponentArmyDefendingArray.get(0).getHealth() <= 0){
+                        //if died print
+                        System.out.println(opponentArmyDefendingArray.get(0).getName()+" Died!");
+                        //get the name of died character
+                        String diedCharacter = opponentArmyDefendingArray.get(0).getName();
+                        //remove the died character from opponentArmyDiffendingArray
+                        opponentArmyDefendingArray.remove(0);
+                        //search and remove the died charactor from opponentArmyAttacking Array
+                        for (Character character: opponentArmyHealingArray){
+                            if (character.getName().equals(diedCharacter)){
+                                opponentArmyHealingArray.remove(character);
                             }
                         }
-                        Iterator<Character> iterator4 =opponentArmyHealingArray.iterator();//search and remove the died charactor from opponentArmyHealingArray
-                        while (iterator.hasNext()) {
-                            Character character = iterator4.next();
-                            if (character.getName().equals(diedChar)) {
-                                iterator4.remove();
-                            }
-                        }
-
-
-
-
                     }
-
-
-
-
-
-
-                }else{
+                }
+                else{
                     //if challengerArmyAttackingArray current attacking charactor is healer->>>
-                    healersAttackValue=challengerArmyAttackingArray.get(0).getAttack();//get the healers attaking value
+                    healersAttackValue = challengerArmyAttackingArray.get(0).getAttack();//get the healers attaking value
+                    //sort the challengerarmyhealingarray according to current hea,th values
+                    challengerArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));;
+                    //calculate the healvalue of the healer
+                    double healvalue = 0.1*(challengerArmyAttackingArray.get(0).getAttack());
+                    //get the lowest health character and heal it
+                    challengerArmyHealingArray.get(0).setHealth(challengerArmyHealingArray.get(0).getHealth() + healvalue);
 
-
-                    challengerArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));;//sort the challengerarmyhealingarray according to current hea,th values
-                    double healvalue=0.1*(challengerArmyAttackingArray.get(0).getAttack());//calculate the healvalue of the healer
-                    challengerArmyHealingArray.get(0).setHealth(challengerArmyHealingArray.get(0).getHealth()+healvalue);//get the lowest health character and heal it
-
-                    System.out.println("Healer is healed"+challengerArmyHealingArray.get(0).getHealth()+"by"+healvalue);
-
-                    Character healedchar=challengerArmyHealingArray.get(0);//save the healed charactor into a varibale
-                    for (Character character : opponentArmyDefendingArray) {//also update the health value on opponentArmyDiffenderArray the lowest health charactor health
+                    System.out.println("Healer is healed "+challengerArmyHealingArray.get(0).getHealth()+" by " + healvalue);
+                    //save the healed charactor into a varibale
+                    Character healedchar = challengerArmyHealingArray.get(0);
+                    //also update the health value on opponentArmyDiffenderArray the lowest health charactor health
+                    for (Character character : opponentArmyDefendingArray) {
                         if(character.getName().equals(healedchar.getName())){
                             character.setHealth(character.getHealth()+healvalue);
                         }
                         // Access each element using the variable 'character'
-
                     }
-
-
-
-
-
-
-
                 }
-
-
-
-
-
-                attackingSide = 1;
-            }else{
-
+                attackingSide = true;
+            }
+            else{
                 //opponent attacking turn
                 if(!opponentArmyAttackingArray.get(0).getName().equals("healer")) {
-
-                    double dmg = 0.5 * (opponentArmyAttackingArray.get(0).getAttack()) - 0.1 * (challengerArmyDefendingArray.get(0).getDefence());//calculate the damage value of opponnet army attacking  value
-                    challengerArmyDefendingArray.get(0).setHealth(challengerArmyDefendingArray.get(0).getHealth() - dmg);//reduce health of challenger army difending  character according to the dmg value
+                    //calculate the damage value of opponnet army attacking  value
+                    double dmg = 0.5 * (opponentArmyAttackingArray.get(0).getAttack()) - 0.1 * (challengerArmyDefendingArray.get(0).getDefence());
+                    //reduce health of challenger army difending  character according to the dmg value
+                    challengerArmyDefendingArray.get(0).setHealth(challengerArmyDefendingArray.get(0).getHealth() - dmg);
 
                     System.out.println(opponentArmyDefendingArray.get(0).getName()+"'s health reduce by"+dmg+"by the attck of"+challengerArmyAttackingArray.get(0).getName());
 
                     if(initialChallenger.getHomeGround().equals("hillcrest") && opponentArmyAttackingArray.get(0).getCharacterType().equals("highlander")){
-                        double bonusdmg = 0.5 * (opponentArmyAttackingArray.get(0).getAttack()*0.2) - 0.1 * (challengerArmyDefendingArray.get(0).getDefence());//get the damge value of challenger army attacking array
-                        opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - bonusdmg);//reduce the health of defending array army charactrer according to the damage value
-
+                        //get the damge value of challenger army attacking array
+                        double bonusdmg = 0.5 * (opponentArmyAttackingArray.get(0).getAttack()*0.2) - 0.1 * (challengerArmyDefendingArray.get(0).getDefence());
+                        //reduce the health of defending array army charactrer according to the damage value
+                        opponentArmyDefendingArray.get(0).setHealth(opponentArmyDefendingArray.get(0).getHealth() - bonusdmg);
                     }
-
                     if(turn!=1){
                         if(initialChallenger.getHomeGround().equals("arcane") && challengerArmyDefendingArray.get(0).getCharacterType().equals("mystics")){
                             challengerArmyDefendingArray.get(0).setHealth(previousHealth*1.1);
-
-
                         }
                     }
-                    if(challengerArmyDefendingArray.get(0).getHealth()<=0){//check whther challener army difending charactor is die or not
+                    //check whther challener army difending charactor is die or not
+                    if(challengerArmyDefendingArray.get(0).getHealth()<=0){
                         System.out.println(challengerArmyDefendingArray.get(0).getName()+"Died!");
-                        String diedChar=challengerArmyDefendingArray.get(0).getName();// get the name of died charactor
-                        challengerArmyDefendingArray.remove(0);//remove the died charactor from challengerarmy diffending array
-                        Iterator<Character> iterator3 =challengerArmyAttackingArray.iterator();//remove the died charactor from challengerArmy Attacking Array
+                        // get the name of died charactor
+                        String diedChar=challengerArmyDefendingArray.get(0).getName();
+                        //remove the died charactor from challengerarmy diffending array
+                        challengerArmyDefendingArray.remove(0);
+                        //remove the died charactor from challengerArmy Attacking Array
+                        Iterator<Character> iterator3 =challengerArmyAttackingArray.iterator();
                         while (iterator.hasNext()) {
                             Character character = iterator3.next();
                             if (character.getName().equals(diedChar)) {
                                 iterator3.remove();
                             }
                         }
-                        Iterator<Character> iterator4 =challengerArmyHealingArray.iterator();//remove the died character from challanging army healing array
+                        //remove the died character from challanging army healing array
+                        Iterator<Character> iterator4 =challengerArmyHealingArray.iterator();
                         while (iterator.hasNext()) {
                             Character character = iterator4.next();
                             if (character.getName().equals(diedChar)) {
                                 iterator4.remove();
                             }
                         }
-
-
-
-
                     }
-
-
-
-
-
-                }else{
+                }
+                else{
                     healersAttackValue=opponentArmyAttackingArray.get(0).getAttack();
-
-
                     challengerArmyHealingArray.sort(Comparator.comparingDouble(Character::getHealth));;
                     double healvalue=0.1*(challengerArmyAttackingArray.get(0).getAttack());
-                    challengerArmyHealingArray.get(0).setHealth(challengerArmyHealingArray.get(0).getHealth()+healvalue);//update the heal value on charactor healing value
-
+                    //update the heal value on charactor healing value
+                    challengerArmyHealingArray.get(0).setHealth(challengerArmyHealingArray.get(0).getHealth()+healvalue);
                     System.out.println("Healer is healed"+challengerArmyHealingArray.get(0).getHealth()+"by"+healvalue);
-
-
-
-                    Character healedchar=challengerArmyHealingArray.get(0);//save the healed charactor into a varibale
-                    for (Character character : challengerArmyDefendingArray) {//also update the health value on challengerArmyDiffenderArray the lowest health charactor health
+                    //save the healed charactor into a varibale
+                    Character healedchar=challengerArmyHealingArray.get(0);
+                    //also update the health value on challengerArmyDiffenderArray the lowest health charactor health
+                    for (Character character : challengerArmyDefendingArray) {
                         if(character.getName().equals(healedchar.getName())){
                             character.setHealth(character.getHealth()+healvalue);
                         }
-                        // Access each element using the variable 'character'
-
                     }
-
-
-
-
-
-
-
                 }
                 previousHealth=opponentArmyDefendingArray.get(0).getHealth();
-
-
-
-
-
-
-
+            }
+            if(i==5){
+                i = 0;
+            }else{
+                i++;
             }
             turn=turn+1;
             if(turn==10){
                 isWarEnded=true;
                 System.out.println("WarEnded");
-
-
             }
-
-
-
-
         }
         System.out.println("------Results----------");
         int finalcountchallengerArmy=challengerArmyAttackingArray.size();
@@ -311,11 +265,9 @@ public class War {
             System.out.println("winner is=" + initialChallenger.getName());
         } else if (finalcountchallengerArmy<finalcountopponentArmy) {
             System.out.println("winner is="+initialOpponent.getName());
-
-        }else{
+        }
+        else{
             System.out.println("War is Draw");
         }
-
-
     }
 }
